--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Ma Premiere Page web</h1>
     <p>je suis à ma premiére page web</p>
     <p>je suis trés fier de pouvoir faire du codage</p>
+    <h2>Le premier sous-titre de ma page</h2>
+    
 
 </body>
 </html>
